syntax="proto3";

option go_package="golangassignment/proto/wallet_service/v1";

import "google/protobuf/timestamp.proto";

package proto.wallet_service.v1;

service TransactionService{    
    rpc CreateTransaction(CreateTransactionRequest) returns (Transaction);
    rpc GetTransactionByID(GetTransactionByIDRequest) returns (GetTransactionByIDResponse);
    rpc GetTransactionByWalletID(GetTransactionByWalletIDRequest) returns (GetTransactionByWalletIDResponse);
    rpc DeleteTransaction(DeleteTransactionRequest) returns (Transaction);    
}

message Transaction{
    int32 id = 1;
    int32 walletid = 2;
    string trxtype = 3;
    int32 walletsourceid = 4;
    string description  = 5;
    float amount = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message TransactionByWalletID{
    int32 Id = 1;
    int32 Walletid = 2;
    string Walletname = 3;
    string Trxtype = 4;
    int32 Walletsourceid  = 5;
    float Amount = 6;
    string Name  = 7;
    google.protobuf.Timestamp Created_at = 8;
    google.protobuf.Timestamp Updated_at = 9;
}

message GetTransactionResponse{
    repeated Transaction transactions = 1;
}

message GetTransactionByIDRequest{
    int32 id =1;
}

message GetTransactionByIDResponse{
    Transaction transaction = 1;
}

message GetTransactionByWalletIDRequest{
    int32 walletid =1;
}

message GetTransactionByWalletIDResponse{
    repeated TransactionByWalletID transactions = 1;
}

message DeleteTransactionRequest{
    int32 idtrx = 1;    
}

message CreateTransactionRequest{    
    int32 walletid = 1;
    string trxtype = 2;
    int32 walletsourceid = 3;
    string description = 4;    
    float amount = 5;    
}

message MutationTransactionResponse{
    string message = 1;
}